k8s/release/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-app-ingress
  namespace: grass-diary-backend-release
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - chzzk-diary-server.shop
    secretName: chzzk-diary-server-tls
  rules:
  - host: chzzk-diary-server.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-boot-app-svc
            port:
              number: 80
